  get back the reason for the exception.
- Added boost::wave::is_recoverable(cpp_exception const&) alowing to decide,
  whether it is possible to continue after a cpp_exception has been thrown.
  This is a temporary hack to overcome the current limitation of the library
  not allowing to do generic error recovery. It allows to recover from 75% of
  the generated errors types.
- The --timer command line option for the wave driver now prints the elapsed 
  time correctly even if a preprcessing error occured.
- Fixed a error recovery problem which skipped one token after continuing in
  case this was a pp directive.
  
Mon Dec  5 22:05:22 CST 2005
Boost V1.33.1
- Version 1.2.1
- Fixed bug reported as Sourceforge bug 1274584.
- Switched to Re2C V0.9.9.
- Fixed a bug where the 'parameters' and 'definition' parameters to the 
  defined_macro callback of the preprocessing hooks were always empty (thanks
  to Stefan Seefeld for reporting).
- Fixed missing namespace specifiers in token definition macros (thanks to 
  Jozsef Mihalicza for reporting).
- Enabled --preserved and --long_long modes by default for the cpp_tokens 
  sample.
- Newline tokens reported a wrong line number (offset by one) when using the
  Re2C generated lexer (thanks to Jozsef Mihalicza for pointing this out).
- Changed file positions to carry 'unsigned int' line and column numbers.
- Fixed tokens of a generated #line directive to carry the correct column 
  numbers.
- Tokens now contain the correct filename, line and column numbers even if
  a #line directive was encountered.
- Fixed wrong line numbering in reference comments of the tests t_5_002.cpp and 
  t_5_035.cpp.
- Made sure, that preprocessor expression errors get ignored for 'passive' 
  #elif branches.
- Fixed an issue reported by the gcc debug stl.
- Added the <vc-7_1-stlport><*><rtti>off directive to all of the V1 Jamfiles.

Wed Aug 17 20:21:00 CST 2005
Boost V1.33.0
Version 1.2
- Fixed name clash wrt T_DIVIDE on FreeBSD.